2005-08-17  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
* The $SHELL environment variable is set to 'irb' for ruby projects.
* Added a project option to customise the ruby shell
* A 'def cd(dir) Dir.chdir dir end' line must be added to your
  .irbrc file to prevent syntax errors when konsole changes directory

2005-06-28  Richard Dale  <Richard_Dale@tipitina.demon.co.uk>
  * Fixed bug in 'run main program' project option where the .ui file was out of 
    sync with the code
  * Add a 'show constants in debugger' project option. This is needed because there
    are so many constants in the qtruby/korundum classes that it slows the debugger
    right down and clutters the variables view.
  * Added a 'Trace into Ruby' project option to show ruby code from installed libraries
    in the debugger.
  * The debugger can now expand instance variables nested within instance variables
    using get_instance_variable().
  * Improved the parsing of pretty printed items that are all on one line, as opposed to
    one line per name=value pair.

2005-06-25 Pieter Pareit <pieter.pareit@scarlet.be>
  * Added ruby_{run,config} icons, the .png files are used by kdevelop,
    the .psd files can be used by artists when icons need to be changed
    Thanks Zoran Karavla for the artwork!

2005-05-26 Tobias Erbsland <te@profzone.ch>
 * Added new class QtBuildConfig. This class stores the configuration
   about the used Qt library. Is Qt used, which major version and
   where the Qt library path (QTDIR) for this project is. 
   In a later step, it's possible to use different qt installations
   for each project. E.g. you develop on a KDE4.x programm under KDE3.x.
 * Added a new tab in the C++ options dialog (CCConfigWidget).
   The user can edit the configuration QtBuildConfig in this tab.
 * New class wizard:
   - Qt checkboxes are disabled (hide them?) on non-qt projects.
   - Different code is generated for Qt3.x and Qt4.x projects.